--- a/src/main/resources/com/example/project4/build-your-own-view.fxml
+++ b/src/main/resources/com/example/project4/build-your-own-view.fxml
@@ -49,5 +49,7 @@
       </Label>
       <ComboBox fx:id="size" layoutX="379.0" layoutY="70.0" onAction="#onSizeAction" prefWidth="150.0" promptText="Choose size" />
       <ListView fx:id="currToppings" layoutX="354.0" layoutY="112.0" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="goBackButton" layoutX="245.0" layoutY="339.0" mnemonicParsing="false" onAction="#onGoBackButtonClick" text="Go Back" />
+      <Label fx:id="warningLabel" layoutX="65.0" layoutY="377.0" text="Warning" />
    </children>
 </AnchorPane>
