--- a/src/main/resources/com/example/project4/orders-view.fxml
+++ b/src/main/resources/com/example/project4/orders-view.fxml
@@ -1,14 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="com.example.project4.OrdersController"
-            prefHeight="400.0" prefWidth="600.0">
 
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.project4.OrdersController">
+   <children>
+      <Label layoutX="144.0" layoutY="32.0" text="Order" underline="true">
+         <font>
+            <Font size="19.0" />
+         </font>
+      </Label>
+      <ComboBox fx:id="ordersBox" layoutX="93.0" layoutY="70.0" onAction="#onOrdersBoxAction" prefWidth="150.0" promptText="Choose Pizza..." />
+      <TableView fx:id="pizzaTable" layoutX="32.0" layoutY="215.0" prefHeight="159.0" prefWidth="540.0">
+        <columns>
+          <TableColumn fx:id="pizzaType" prefWidth="75.0" text="Type" />
+          <TableColumn fx:id="pizzaStyle" prefWidth="75.0" text="Style" />
+            <TableColumn fx:id="pizzaSize" prefWidth="75.0" text="Size" />
+            <TableColumn fx:id="pizzaCrust" prefWidth="98.00006103515625" text="Crust" />
+            <TableColumn fx:id="pizzaToppings" prefWidth="155.33331298828125" text="Toppings" />
+            <TableColumn fx:id="pizzaSubtotal" prefWidth="59.33331298828125" text="Subtotal" />
+        </columns>
+      </TableView>
+      <Button fx:id="removePizzaButton" layoutX="123.0" layoutY="141.0" mnemonicParsing="false" onAction="#onRemovePizzaButtonClick" text="Remove Pizza" />
+      <Button fx:id="placeOrderButton" layoutX="408.0" layoutY="70.0" mnemonicParsing="false" onAction="#onPlaceOrderButtonClick" text="Place Order" />
+      <Button fx:id="goBackButton" layoutX="417.0" layoutY="141.0" mnemonicParsing="false" onAction="#onGoBackButtonClick" text="Go Back" />
+      <Label fx:id="warnLabel" layoutX="408.0" layoutY="95.0" text="Warning" />
+      <Label fx:id="warnLabel2" layoutX="123.0" layoutY="166.0" text="Warning" />
+   </children>
 </AnchorPane>
